@@ -1,8 +1,11 @@
 #include "config.h"
 
-#include "InactivityWatcher.h"
+#include "config.h"
 
+#include "InactivityWatcher.h"
 #include "Utils/TimeUtil.h"
+#include "Core/Hardware/MoveSensor.h"
+#include <LilyGoWatch.h>
 
 InactivityWatcher* InactivityWatcher::inst;
 
@@ -19,8 +22,20 @@ bool InactivityWatcher::isInactive() {
 
 void InactivityWatcher::markActivity() {
 	this->lastActivity = TimeUtil::getCurrentTimeInSeconds();
+	this->lastOnHandActivity = TimeUtil::getCurrentTimeInSeconds();
 }
 
 InactivityWatcher::InactivityWatcher() {
 	this->lastActivity = TimeUtil::getCurrentTimeInSeconds();
+	this->lastOnHandActivity = TimeUtil::getCurrentTimeInSeconds();
+}
+
+bool InactivityWatcher::isDetectedOnHand() {
+	Accel acc = MoveSensor::getInstance()->getAccel();
+	bool sensorChanged = false;
+	if (abs(acc.x) > DETECT_ONHAND_ACC_THRESHOLD) {
+		this->lastOnHandActivity = TimeUtil::getCurrentTimeInSeconds();
+		sensorChanged = true;
+	}
+	return sensorChanged ||  ((this->lastOnHandActivity + INACTIVITY_ONHAMD_TRESHOLD) > TimeUtil::getCurrentTimeInSeconds());
 }
