@@ -32,8 +32,11 @@
 #define SLEEPCYCLE_MS 100
 #define TICK_WAKEUP 10
 
-
 #define TICKER_BATTERY 12000
 #define TICKER_DATETIME 2
 #define TICKER_CLOCKS 20
 #define TICKER_STEPS 20
+
+#define DETECT_ONHAND_ACC_THRESHOLD 50
+
+#define INACTIVITY_ONHAMD_TRESHOLD 5
